    variable, now take precedence over "built-in" Automake macros.
    For example, assuming Automake is installed in the '/usr/local'
    hierarchy, a definition of the AM_PROG_VALAC macro found in file
    (say) '/usr/local/share/aclocal/my-vala.m4' should take precedence
    over the same-named automake-provided macro, as defined in file
    '/usr/local/share/aclocal-1.14/vala.m4'.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.13:

* WARNING: Future backward-incompatibilities!

  - Automake 1.14 will likely require Autoconf 2.70 or later (which is
    still unreleased at the moment of writing, but is planned to be
    released before Automake 1.14 is).

  - Automake 1.14 will likely drop support for the long-deprecated
    'configure.in' name for the Autoconf input file.  You are advised
    to use the recommended name 'configure.ac' instead.

  - The long-obsolete (since automake 1.10) AM_PROG_MKDIR m4 macro will
    be removed in Automake 1.14.  The $(mkdir_p) make variable and the
    @mkdir_p@ substitution will still remain available (as aliases of
    $(MKDIR_P)) for the moment, for better backward compatibility; but
    you are advised to stop using ASAP.

  - The ACLOCAL_AMFLAGS special make variable will be fully deprecated
    in Automake 1.14 (where it will raise warnings in the "obsolete"
    category).  You are advised to start relying on the new Automake
    support for AC_CONFIG_MACRO_DIRS instead (which is introduced with
    this release; see below for more information).

  - Support for IRIX and the SGI C/C++ compilers will be removed in
    Automake 1.14: they have seen their last release in 2006, and SGI
    is expected to retire support from them in December 2013; see
    <http://www.sgi.com/services/support/irix_mips_support.html> for
    more information.

  - Future versions of Automake might remove support for MS-DOS and
    Windows 95/98/ME (support for them was offered by relying on the