@@ -704,7 +704,7 @@ register_language ('name' => 'c',
 		   'flags' => ['CFLAGS', 'CPPFLAGS'],
 		   'ccer' => 'CC',
 		   'compiler' => 'COMPILE',
-		   'compile' => '$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)',
+		   'compile' => '$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)',
 		   'lder' => 'CCLD',
 		   'ld' => '$(CC)',
 		   'linker' => 'LINK',
@@ -721,7 +721,7 @@ register_language ('name' => 'cxx',
 		   'link' => '$(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'autodep' => 'CXX',
 		   'flags' => ['CXXFLAGS', 'CPPFLAGS'],
-		   'compile' => '$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)',
+		   'compile' => '$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)',
 		   'ccer' => 'CXX',
 		   'compiler' => 'CXXCOMPILE',
 		   'compile_flag' => '-c',
@@ -740,7 +740,7 @@ register_language ('name' => 'objc',
 		   'link' => '$(OBJCLD) $(AM_OBJCFLAGS) $(OBJCFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'autodep' => 'OBJC',
 		   'flags' => ['OBJCFLAGS', 'CPPFLAGS'],
-		   'compile' => '$(OBJC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_OBJCFLAGS) $(OBJCFLAGS)',
+		   'compile' => '$(OBJC) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_OBJCFLAGS) $(OBJCFLAGS)',
 		   'ccer' => 'OBJC',
 		   'compiler' => 'OBJCCOMPILE',
 		   'compile_flag' => '-c',
@@ -758,7 +758,7 @@ register_language ('name' => 'objcxx',
 		   'link' => '$(OBJCXXLD) $(AM_OBJCXXFLAGS) $(OBJCXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'autodep' => 'OBJCXX',
 		   'flags' => ['OBJCXXFLAGS', 'CPPFLAGS'],
-		   'compile' => '$(OBJCXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_OBJCXXFLAGS) $(OBJCXXFLAGS)',
+		   'compile' => '$(OBJCXX) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_OBJCXXFLAGS) $(OBJCXXFLAGS)',
 		   'ccer' => 'OBJCXX',
 		   'compiler' => 'OBJCXXCOMPILE',
 		   'compile_flag' => '-c',
@@ -776,7 +776,7 @@ register_language ('name' => 'upc',
 		   'link' => '$(UPCLD) $(AM_UPCFLAGS) $(UPCFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'autodep' => 'UPC',
 		   'flags' => ['UPCFLAGS', 'CPPFLAGS'],
-		   'compile' => '$(UPC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_UPCFLAGS) $(UPCFLAGS)',
+		   'compile' => '$(UPC) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_UPCFLAGS) $(UPCFLAGS)',
 		   'ccer' => 'UPC',
 		   'compiler' => 'UPCCOMPILE',
 		   'compile_flag' => '-c',
@@ -878,7 +878,7 @@ register_language ('name' => 'asm',
 		   'config_vars' => ['CCAS', 'CCASFLAGS'],
 
 		   'flags' => ['CCASFLAGS'],
-		   # Users can set AM_CCASFLAGS to include DEFS, INCLUDES,
+		   # Users can set AM_CCASFLAGS to include $(DEFS) or
 		   # or anything else required.  They can also set CCAS.
 		   # Or simply use Preprocessed Assembler.
 		   'compile' => '$(CCAS) $(AM_CCASFLAGS) $(CCASFLAGS)',
@@ -895,7 +895,7 @@ register_language ('name' => 'cppasm',
 
 		   'autodep' => 'CCAS',
 		   'flags' => ['CCASFLAGS', 'CPPFLAGS'],
-		   'compile' => '$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS)',
+		   'compile' => '$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS)',
 		   'ccer' => 'CPPAS',
 		   'compiler' => 'CPPASCOMPILE',
 		   'compile_flag' => '-c',
@@ -949,7 +949,7 @@ register_language ('name' => 'ppfc',
 		   'flags' => ['FCFLAGS', 'CPPFLAGS'],
 		   'ccer' => 'PPFC',
 		   'compiler' => 'PPFCCOMPILE',
-		   'compile' => '$(FC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FCFLAGS) $(FCFLAGS)',
+		   'compile' => '$(FC) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FCFLAGS) $(FCFLAGS)',
 		   'compile_flag' => '-c',
 		   'output_flag' => '-o',
 		   'libtool_tag' => 'FC',
@@ -959,9 +959,9 @@ register_language ('name' => 'ppfc',
 # Preprocessed Fortran 77
 #
 # The current support for preprocessing Fortran 77 just involves
-# passing "$(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS)
-# $(CPPFLAGS)" as additional flags to the Fortran 77 compiler, since
-# this is how GNU Make does it; see the "GNU Make Manual, Edition 0.51
+# passing "$(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS)"
+# as additional flags to the Fortran 77 compiler, since this is
+# how GNU Make does it; see the "GNU Make Manual, Edition 0.51
 # for 'make' Version 3.76 Beta" (specifically, from info file
 # '(make)Catalogue of Rules').
 #
@@ -981,7 +981,7 @@ register_language ('name' => 'ppf77',
 		   'flags' => ['FFLAGS', 'CPPFLAGS'],
 		   'ccer' => 'PPF77',
 		   'compiler' => 'PPF77COMPILE',
-		   'compile' => '$(F77) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FFLAGS) $(FFLAGS)',
+		   'compile' => '$(F77) $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FFLAGS) $(FFLAGS)',
 		   'compile_flag' => '-c',
 		   'output_flag' => '-o',
 		   'libtool_tag' => 'F77',
@@ -7830,9 +7830,8 @@ sub generate_makefile ($$)
     }
 
   # Catch some obsolete variables.
-  msg_var ('obsolete', 'INCLUDES',
-	   "'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')")
-    if var ('INCLUDES');
+  reject_var 'INCLUDES', "'INCLUDES' is the obsolete name for " .
+                         "'AM_CPPFLAGS' (or '*_CPPFLAGS')";
 
   # Must do this after reading .am file.
   define_variable ('subdir', $relative_dir, INTERNAL);
