@@ -11,6 +11,11 @@ New in 1.14:
     over the same-named automake-provided macro, as defined in file
     '/usr/local/share/aclocal-1.14/vala.m4'.
 
+* Obsolete features:
+
+  - Support for the long-obsolete $(INCLUDES) variable has been finally
+    removed, in favour of the modern equivalent $(AM_CPPFLAGS).
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 New in 1.13:
